@@ -1,5 +1,13 @@
 [b]Version 0.6.2[/b]:
 
+(2008-06-11)
+ * Now the default value for option change_equalizer_on_startup is true
+   (users which run the previous svn revision will have to make the change
+   manually) but the brightness, contrast... won't be changed on startup 
+   if the value is 0.
+ * Also be sure that the equalizer dialog is updated just after a file begins
+   to play.
+
 (2008-06-10)
  * Renamed the config option "dont_use_eq_options" to 
    "change_equalizer_on_startup" and set it to false as default because 
